--- a/.github/workflows/master_ci_cd.yml
+++ b/.github/workflows/master_ci_cd.yml
@@ -46,6 +46,9 @@ jobs:
       - name: update model name in k8 
         run: sed -i 's/{model_name}/${{secrets.MODEL_NAME}}/g' manifests/k8s.yml
 
+      - name: update model name in k8 
+        run: sed -i 's/{JWT_SECRET}/${{secrets.JWT_SECRET}}/g' manifests/k8s.yml
+
       - name: update _ by - 
         run: sed -i 's/_/-/g' manifests/k8s.yml
 
