--- a/.github/workflows/master_ci_cd.yml
+++ b/.github/workflows/master_ci_cd.yml
@@ -17,6 +17,7 @@ jobs:
         uses: SpicyPizza/create-envfile@v1.3
         with:
           envkey_DEV_DATABASE_URL : ${{ secrets.DEV_DATABASE_URL }}
+          envkey_JWT_SECRET : ${{ secrets.JWT_SECRET }}
           file_name: .env
           fail_on_empty: false
       
@@ -45,10 +46,7 @@ jobs:
 
       - name: update model name in k8 
         run: sed -i 's/{model_name}/${{secrets.MODEL_NAME}}/g' manifests/k8s.yml
-
-      - name: update model name in k8 
-        run: sed -i 's/{JWT_SECRET}/${{secrets.JWT_SECRET}}/g' manifests/k8s.yml
-
+        
       - name: update _ by - 
         run: sed -i 's/_/-/g' manifests/k8s.yml
 
